fixed bug with login and signup modal on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,11 +235,38 @@ html {
 
 @media only screen and (max-width: 768px) {
   .signup-container {
-    width: 90%; } }
-
-@media only screen and (max-width: 500px) {
+    width: 90%; }
+  .close-btn {
+    width: 2.3rem;
+    height: 2.3rem;
+    top: .5rem;
+    right: .2rem; }
   .form {
-    width: 90%; } }
+    justify-content: space-around; }
+  .form__label {
+    font-size: 1.6rem; }
+  .form__input {
+    font-size: 1.6rem; }
+  .form__input::-webkit-input-placeholder {
+    font-size: 1.6rem; }
+  .form__input:-ms-input-placeholder {
+    font-size: 1.6rem; }
+  .form__input::-ms-input-placeholder {
+    font-size: 1.6rem; }
+  .form__input::placeholder {
+    font-size: 1.6rem; }
+  .form__btn {
+    padding: 0.8rem 1.5rem;
+    font-size: 1.6rem; } }
+
+@media only screen and (max-width: 321px) {
+  .form__input {
+    width: 100%; }
+  .form__label {
+    font-size: 1.6rem; }
+  .form__btn {
+    padding: 0.8rem 1.5rem;
+    font-size: 1.6rem; } }
 
 .login-container {
   position: fixed;
