--- a/sass/layout/_modalSignUp.scss
+++ b/sass/layout/_modalSignUp.scss
@@ -192,12 +192,56 @@
 @media only screen and (max-width: 768px) { 
     .signup-container {
         width: 90%;
+        
+    }
+
+    .close-btn {
+        width: 2.3rem;
+        height: 2.3rem;
+        top: .5rem;
+        right:.2rem;
+    }
+
+    .form {
+        justify-content: space-around;
+    }
+
+    .form__label {
+        font-size: 1.6rem;
+    }
+
+    .form__input {
+        font-size: 1.6rem;
+    }
+
+    .form__input::placeholder {
+        font-size: 1.6rem;
+    }
+
+    .form__btn {
+        padding: 0.8rem 1.5rem;
+        font-size: 1.6rem;
     }
 }
 
-@media only screen and (max-width: 500px) { 
-    .form {
-        width: 90%;
-        
+@media only screen and (max-width: 321px) { 
+
+    .form__group {
     }
+
+    .form__input {
+        width: 100%;
+    }
+
+    .form__label {
+        font-size: 1.6rem;
+    }
+
+
+
+    .form__btn {
+        padding: 0.8rem 1.5rem;
+        font-size: 1.6rem;
+    }
+    
 }
